--- a/web/package.json
+++ b/web/package.json
@@ -49,7 +49,6 @@
   "dependencies": {
     "@ant-design/colors": "6.0.0",
     "@ant-design/icons": "4.8.1",
-    "@synapse/audio-file-decoder": "file:./libs/audio-file-decoder",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
@@ -57,6 +56,10 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@synapse/audio-file-decoder": "file:./libs/audio-file-decoder",
     "@tanstack/query-core": "^5.66.0",
     "@tanstack/react-query": "^4",
     "@tanstack/react-table": "^8.21.3",
@@ -74,6 +77,8 @@
     "deep-equal": "^2.0.5",
     "emoji-regex": "^7.0.3",
     "fft.js": "^4.0.4",
+    "framer-motion": "^12.24.12",
+    "gsap": "^3.14.2",
     "history": "^4.10.1",
     "html-react-parser": "^1.2.4",
     "insert-after": "^0.1.4",
@@ -87,6 +92,7 @@
     "mobx-react": "^6",
     "mobx-state-tree": "^3.16.0",
     "nanoid": "^3.3.8",
+    "ogl": "^1.0.11",
     "pako": "^2.1.0",
     "papaparse": "^5.4.1",
     "pleasejs": "^0.4.2",
@@ -110,10 +116,12 @@
     "rehype-raw": "^7.0.0",
     "sanitize-html": "^2.14.0",
     "shadcn": "^2.1.8",
+    "simplex-noise": "^4.0.3",
     "simplify-js": "^1.2.4",
     "storybook": "^9.0.13",
     "sucrase": "^3.35.0",
     "tailwind-merge": "^2.6.0",
+    "three": "^0.159.0",
     "webfft": "^1.0.3",
     "xpath-range": "^1.1.1",
     "zod": "^3.23.8"
