feat(blog): add blog list and post pages with dynamic content
- Created BlogListPage component to display a list of blog posts with animations.
- Implemented BlogPostPage component for individual blog post details, including structured content rendering.
- Added navigation and footer components for consistent layout.
- Introduced a centralized blog content structure for easy management of posts.
- Exported BlogListPage and BlogPostPage from the index file for streamlined imports.

--- a/web/apps/synapse/project.json
+++ b/web/apps/synapse/project.json
@@ -16,7 +16,13 @@
         "baseHref": "/",
         "main": "apps/synapse/src/main.tsx",
         "tsConfig": "apps/synapse/tsconfig.app.json",
-        "assets": [],
+        "assets": [
+          {
+            "glob": "**/*",
+            "input": "apps/synapse/public",
+            "output": "."
+          }
+        ],
         "styles": [],
         "scripts": [],
         "isolatedConfig": true,
