--- a/web/libs/editor/package.json
+++ b/web/libs/editor/package.json
@@ -11,9 +11,14 @@
     "antd": "^4.3.3",
     "chroma-js": "^2.1.1",
     "colormap": "^2.3.2",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-tools": "^6.0.10",
+    "cornerstone-wado-image-loader": "^4.13.2",
     "d3": "^5.16.0",
     "date-fns": "^2.20.1",
+    "dicom-parser": "^1.8.21",
     "emoji-regex": "^7.0.3",
+    "hammerjs": "^2.0.8",
     "insert-after": "^0.1.4",
     "keymaster": "^1.6.2",
     "konva": "^8.1.3",
