--- a/web/libs/editor/package.json
+++ b/web/libs/editor/package.json
@@ -6,14 +6,17 @@
   "dependencies": {
     "@ant-design/colors": "6.0.0",
     "@ant-design/icons": "4.8.1",
+    "@cornerstonejs/core": "^1.0.0",
+    "@cornerstonejs/dicom-image-loader": "^1.0.0",
+    "@cornerstonejs/nifti-volume-loader": "^4.15.20",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.0.0",
+    "@cornerstonejs/tools": "^1.0.0",
+    "@icr/polyseg-wasm": "^0.4.0",
     "@synapse/audio-file-decoder": "file:../../libs/audio-file-decoder",
     "@thi.ng/rle-pack": "^3.1.30",
     "antd": "^4.3.3",
     "chroma-js": "^2.1.1",
     "colormap": "^2.3.2",
-    "cornerstone-core": "^2.6.1",
-    "cornerstone-tools": "^6.0.10",
-    "cornerstone-wado-image-loader": "^4.13.2",
     "d3": "^5.16.0",
     "date-fns": "^2.20.1",
     "dicom-parser": "^1.8.21",
