--- a/web/package.json
+++ b/web/package.json
@@ -85,6 +85,7 @@
     "jotai": "^2.11.3",
     "jotai-tanstack-query": "^0.9.0",
     "js-base64": "^3.7.7",
+    "jszip": "^3.10.1",
     "keymaster": "^1.6.2",
     "konva": "^8.1.3",
     "lodash": "4.17.21",
@@ -192,6 +193,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.3.7",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "cypress": "14.5.0",
