--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,9 +2,9 @@ version: '3.8'
 
 services:
   app:
-    # We use the image built and pushed to Artifact Registry
-    # The deploy script will replace ${IMAGE_URI} with the actual value
-    image: ${IMAGE_URI}
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: synapse-platform
     restart: always
     ports:
@@ -40,6 +40,21 @@ services:
     volumes:
       - synapse_redis_data:/data
 
+  minio:
+    image: minio/minio
+    container_name: synapse-minio
+    restart: always
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+    volumes:
+      - synapse_minio_data:/data
+
 volumes:
   synapse_db_data:
   synapse_redis_data:
+  synapse_minio_data:
