--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,11 @@
   "dependencies": {
     "@ant-design/colors": "6.0.0",
     "@ant-design/icons": "4.8.1",
+    "@cornerstonejs/core": "^1.81.3",
+    "@cornerstonejs/dicom-image-loader": "^1.81.3",
+    "@cornerstonejs/nifti-volume-loader": "^1.81.3",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.81.3",
+    "@cornerstonejs/tools": "^1.81.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
