--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,8 @@ dependencies = [
     ## Synapse SDK dependency (local)
     "synapse-sdk @ file:./synapse-sdk",
     ## End SDK dependency
+    "razorpay (>=1.3.0)",
+    "whitenoise (>=6.6.0)",
 ]
 
 [project.urls]
