--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -68,6 +68,40 @@ services:
     depends_on:
       - app
 
+  # RQ worker for background task processing
+  rq-worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: synapse-rq-worker
+    restart: always
+    env_file:
+      - production.env
+    depends_on:
+      - db
+      - redis
+    command: python synapse/manage.py rqworker default high low
+
+  # Scheduler for periodic tasks (runs every hour)
+  scheduler:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: synapse-scheduler
+    restart: always
+    env_file:
+      - production.env
+    depends_on:
+      - db
+      - redis
+    command: >
+      sh -c "while true; do
+        echo '[Scheduler] Running timeout processing...' &&
+        python synapse/manage.py process_assignment_timeouts &&
+        echo '[Scheduler] Sleeping for 1 hour...' &&
+        sleep 3600;
+      done"
+
 volumes:
   synapse_db_data:
   synapse_redis_data:
